# Starship

./: .nvim.lua  Cargo.toml  Makefile  README.md  rust-toolchain.toml
src/: bsp.rs  comet.rs  console.rs  cpu.rs  driver.rs  main.rs  panic_wait.rs  print.rs  synchronization.rs
src/arch/aarch64/: cpu.rs
src/arch/aarch64/cpu/: boot.s
src/bsp/: rpi.rs
src/bsp/device_driver/: common.rs
src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs  bcm2xxx_pl011_uart.rs
src/bsp/rpi/: driver.rs  kernel.ld  memory.rs
