[package]
name = "starship"
version = "0.1.0"
authors = ["yolocat <developer@yolocat.dev>"]
edition = "2021"

[profile.release]
lto = true

[features]
default = []
bsp_rpi3 = ["tock-registers"]
bsp_rpi4 = ["tock-registers"]

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
tock-registers = { version = "0.9.0", default-features = false, features = ["register_types"], optional = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.4.0"

